tests/expectations/parser/finalize/mapping_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u8'
    --> test:4:13
     |
   4 |     mapping u8: u8 => u8;
     |             ^^"""]
